# university_task

./: README.md  docker-compose.yml
app/: .env  .pre-commit-config.yaml  Dockerfile  config.py  main.py  pyproject.toml
app/api/: base.py
app/api/route/: courses.py  grades.py  students.py  teachers.py
app/db/: base.py  session.py
app/db/models/: assignment.py  building.py  classroom.py  course.py  course_program.py  department.py  exam.py  faculty.py  grade.py  group.py  schedule.py  semester.py  student.py  study_plan.py  teacher.py
app/db/repository/: courses.py  grades.py  students.py  teachers.py
app/schemas/: __init__.py  course.py  grade.py  student.py  teacher.py
sql/: 01_db_schema.sql  02_queries.sql
